# design_patterns

./: README.md  pyproject.toml
src/builder/: builder.py  exercise.py  htmlbuilder.py  person_builder_facets.py  person_builder_inheritence.py
src/factory/: factory_abstract.py  factory_exercise.py  factorymethod.py
src/prototype/: employee_prototype.py  prototype_exercise.py
