[tool.poetry]
name = "design_patterns"
version = "0.1.0"
description = "practice design patterns"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.6.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
